--- a/admin-dashboard/health-facilities.html
+++ b/admin-dashboard/health-facilities.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global CareGivers Database</title>
-    <link rel="shortcut icon" href="assets/images/logo loading screen.png type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo loading screen.png type=" image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
@@ -35,43 +35,45 @@
             </button>
 
 
-<!-- User Dropdown (visible on desktop) -->
-<div class="d-flex ms-lg-auto" id="profile-btn">
-    <div class="dropdown d-none d-lg-block">
-        <div class="dropdown-toggle d-flex align-items-center gap-2 show" data-bs-toggle="dropdown"
-            style="cursor: pointer;" aria-expanded="true">
-            <img src="assets/1.png" alt="" class="user-avatar">
-            <span class=" d-inline user-name"></span>
-        </div>
-        <ul class="dropdown-menu shadow"
-            style="width: 313px; padding: 16px; border-radius: 0px; border: none; position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 42.2222px);"
-            data-popper-placement="bottom-end">
-            <li class="dropdown-header p-0 mb-3">
-                <div class="d-flex gap-3 align-items-center">
-                    <img src="assets/1.png" width="30" class="img-fluid" alt=""
-                        style="width: 87px; height: 87px; border-radius: 50%;">
-                    <div>
-                        <h6 class="mb-0 user-name"></h6>
-                        <small class="text-muted" id="user-role"></small>
+            <!-- User Dropdown (visible on desktop) -->
+            <div class="d-flex ms-lg-auto" id="profile-btn">
+                <div class="dropdown d-none d-lg-block">
+                    <div class="dropdown-toggle d-flex align-items-center gap-2 show" data-bs-toggle="dropdown"
+                        style="cursor: pointer;" aria-expanded="true">
+                        <img src="assets/1.png" alt="" class="user-avatar">
+                        <span class=" d-inline user-name"></span>
                     </div>
+                    <ul class="dropdown-menu shadow"
+                        style="width: 313px; padding: 16px; border-radius: 0px; border: none; position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 42.2222px);"
+                        data-popper-placement="bottom-end">
+                        <li class="dropdown-header p-0 mb-3">
+                            <div class="d-flex gap-3 align-items-center">
+                                <img src="assets/1.png" width="30" class="img-fluid" alt=""
+                                    style="width: 87px; height: 87px; border-radius: 50%;">
+                                <div>
+                                    <h6 class="mb-0 user-name"></h6>
+                                    <small class="text-muted" id="user-role"></small>
+                                </div>
+                            </div>
+                        </li>
+                        <li><a class="dropdown-item py-2 d-flex align-items-center gap-3"
+                                href="/facility-listings.html">
+                                <svg width="26px" height="26px" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M21.5 8.5C21.5 7.09554 21.5 6.39331 21.1629 5.88886C21.017 5.67048 20.8295 5.48298 20.6111 5.33706C20.1699 5.04224 19.5774 5.00529 18.496 5.00066C18.5001 5.29206 18.5 5.59655 18.5 5.91051L18.5 6V7.25H19.5C19.9142 7.25 20.25 7.58579 20.25 8C20.25 8.41421 19.9142 8.75 19.5 8.75H18.5V10.25H19.5C19.9142 10.25 20.25 10.5858 20.25 11C20.25 11.4142 19.9142 11.75 19.5 11.75H18.5V13.25H19.5C19.9142 13.25 20.25 13.5858 20.25 14C20.25 14.4142 19.9142 14.75 19.5 14.75H18.5V21.25H17V6C17 4.11438 17 3.17157 16.4142 2.58579C15.8284 2 14.8856 2 13 2H11C9.11438 2 8.17157 2 7.58579 2.58579C7 3.17157 7 4.11438 7 6V21.25H5.5V14.75H4.5C4.08579 14.75 3.75 14.4142 3.75 14C3.75 13.5858 4.08579 13.25 4.5 13.25H5.5V11.75H4.5C4.08579 11.75 3.75 11.4142 3.75 11C3.75 10.5858 4.08579 10.25 4.5 10.25H5.5V8.75H4.5C4.08579 8.75 3.75 8.41421 3.75 8C3.75 7.58579 4.08579 7.25 4.5 7.25H5.5V6L5.49999 5.9105C5.49996 5.59655 5.49992 5.29206 5.50403 5.00066C4.42262 5.00529 3.83008 5.04224 3.38886 5.33706C3.17048 5.48298 2.98298 5.67048 2.83706 5.88886C2.5 6.39331 2.5 7.09554 2.5 8.5V21.25H2C1.58579 21.25 1.25 21.5858 1.25 22C1.25 22.4142 1.58579 22.75 2 22.75H22C22.4142 22.75 22.75 22.4142 22.75 22C22.75 21.5858 22.4142 21.25 22 21.25H21.5V8.5ZM12 4.25C12.4142 4.25 12.75 4.58579 12.75 5V6.25H14C14.4142 6.25 14.75 6.58579 14.75 7C14.75 7.41421 14.4142 7.75 14 7.75H12.75V9C12.75 9.41421 12.4142 9.75 12 9.75C11.5858 9.75 11.25 9.41421 11.25 9V7.75H10C9.58579 7.75 9.25 7.41421 9.25 7C9.25 6.58579 9.58579 6.25 10 6.25H11.25V5C11.25 4.58579 11.5858 4.25 12 4.25ZM9.25 12C9.25 11.5858 9.58579 11.25 10 11.25H14C14.4142 11.25 14.75 11.5858 14.75 12C14.75 12.4142 14.4142 12.75 14 12.75H10C9.58579 12.75 9.25 12.4142 9.25 12ZM9.25 15C9.25 14.5858 9.58579 14.25 10 14.25H14C14.4142 14.25 14.75 14.5858 14.75 15C14.75 15.4142 14.4142 15.75 14 15.75H10C9.58579 15.75 9.25 15.4142 9.25 15ZM12 18.25C12.4142 18.25 12.75 18.5858 12.75 19V21.25H11.25V19C11.25 18.5858 11.5858 18.25 12 18.25Z"
+                                        fill="#000" />
+                                </svg>
+                                Facility Listings
+                            </a></li>
+                        <div class="border-top mt-2 pt-2">
+                            <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
+                                Logout
+                            </button>
+                        </div>
+                    </ul>
                 </div>
-            </li>
-            <li><a class="dropdown-item py-2 d-flex align-items-center gap-3" href="/facility-listings.html">
-                    <svg width="26px" height="26px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M21.5 8.5C21.5 7.09554 21.5 6.39331 21.1629 5.88886C21.017 5.67048 20.8295 5.48298 20.6111 5.33706C20.1699 5.04224 19.5774 5.00529 18.496 5.00066C18.5001 5.29206 18.5 5.59655 18.5 5.91051L18.5 6V7.25H19.5C19.9142 7.25 20.25 7.58579 20.25 8C20.25 8.41421 19.9142 8.75 19.5 8.75H18.5V10.25H19.5C19.9142 10.25 20.25 10.5858 20.25 11C20.25 11.4142 19.9142 11.75 19.5 11.75H18.5V13.25H19.5C19.9142 13.25 20.25 13.5858 20.25 14C20.25 14.4142 19.9142 14.75 19.5 14.75H18.5V21.25H17V6C17 4.11438 17 3.17157 16.4142 2.58579C15.8284 2 14.8856 2 13 2H11C9.11438 2 8.17157 2 7.58579 2.58579C7 3.17157 7 4.11438 7 6V21.25H5.5V14.75H4.5C4.08579 14.75 3.75 14.4142 3.75 14C3.75 13.5858 4.08579 13.25 4.5 13.25H5.5V11.75H4.5C4.08579 11.75 3.75 11.4142 3.75 11C3.75 10.5858 4.08579 10.25 4.5 10.25H5.5V8.75H4.5C4.08579 8.75 3.75 8.41421 3.75 8C3.75 7.58579 4.08579 7.25 4.5 7.25H5.5V6L5.49999 5.9105C5.49996 5.59655 5.49992 5.29206 5.50403 5.00066C4.42262 5.00529 3.83008 5.04224 3.38886 5.33706C3.17048 5.48298 2.98298 5.67048 2.83706 5.88886C2.5 6.39331 2.5 7.09554 2.5 8.5V21.25H2C1.58579 21.25 1.25 21.5858 1.25 22C1.25 22.4142 1.58579 22.75 2 22.75H22C22.4142 22.75 22.75 22.4142 22.75 22C22.75 21.5858 22.4142 21.25 22 21.25H21.5V8.5ZM12 4.25C12.4142 4.25 12.75 4.58579 12.75 5V6.25H14C14.4142 6.25 14.75 6.58579 14.75 7C14.75 7.41421 14.4142 7.75 14 7.75H12.75V9C12.75 9.41421 12.4142 9.75 12 9.75C11.5858 9.75 11.25 9.41421 11.25 9V7.75H10C9.58579 7.75 9.25 7.41421 9.25 7C9.25 6.58579 9.58579 6.25 10 6.25H11.25V5C11.25 4.58579 11.5858 4.25 12 4.25ZM9.25 12C9.25 11.5858 9.58579 11.25 10 11.25H14C14.4142 11.25 14.75 11.5858 14.75 12C14.75 12.4142 14.4142 12.75 14 12.75H10C9.58579 12.75 9.25 12.4142 9.25 12ZM9.25 15C9.25 14.5858 9.58579 14.25 10 14.25H14C14.4142 14.25 14.75 14.5858 14.75 15C14.75 15.4142 14.4142 15.75 14 15.75H10C9.58579 15.75 9.25 15.4142 9.25 15ZM12 18.25C12.4142 18.25 12.75 18.5858 12.75 19V21.25H11.25V19C11.25 18.5858 11.5858 18.25 12 18.25Z"
-                            fill="#000" />
-                    </svg>
-                    Facility Listings
-                </a></li>
-            <div class="border-top mt-2 pt-2">
-                <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
-                    Logout
-                </button>
             </div>
-        </ul>
-    </div>
-</div>
         </div>
     </header>
 
@@ -240,7 +242,7 @@
                                 </div>
                                 <div>
                                     <h2 class="mb-0 fw-bold card-heading" id="total-emergency">0</h2>
-                                    <p class="text-muted mb-0 card-text">Emergency</p>
+                                    <p class="text-muted mb-0 card-text">Health Centre</p>
                                 </div>
                             </div>
                         </div>
@@ -275,6 +277,55 @@
                                 <div>
                                     <h2 class="mb-0 fw-bold card-heading" id="total-chemists">0</h2>
                                     <p class="text-muted mb-0 card-text">Chemists</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- DHA Users Card -->
+                <div class="col-md-3 col-6" id="pharmacy-card">
+                    <div class="card border-0 shadow-sm total-card">
+                        <div class="card-body p-4">
+                            <div class="d-flex align-items-center  total-card-content">
+                                <div class="icon-circle me-3">
+                                    <img src="assets/pharmacy.png" width="50" alt="Emergency">
+                                </div>
+                                <div>
+                                    <h2 class="mb-0 fw-bold card-heading" id="total-pharmacy ">0</h2>
+                                    <p class="text-muted mb-0 card-text">Pharmacy</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- DHA Users Card -->
+                <div class="col-md-3 col-6" id="drug-store-card">
+                    <div class="card border-0 shadow-sm total-card">
+                        <div class="card-body p-4">
+                            <div class="d-flex align-items-center  total-card-content">
+                                <div class="icon-circle me-3">
+                                    <img src="assets/medicine.png" width="50" alt="Emergency">
+                                </div>
+                                <div>
+                                    <h2 class="mb-0 fw-bold card-heading" id="total-drug-store">0</h2>
+                                    <p class="text-muted mb-0 card-text">Drug Store</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- DHA Users Card -->
+                <div class="col-md-3 col-6" id="maternity-centre-card">
+                    <div class="card border-0 shadow-sm total-card">
+                        <div class="card-body p-4">
+                            <div class="d-flex align-items-center  total-card-content">
+                                <div class="icon-circle me-3">
+                                    <img src="assets/maternity.png" width="50" alt="Emergency">
+                                </div>
+                                <div>
+                                    <h2 class="mb-0 fw-bold card-heading" id="total-maternity-centre">0</h2>
+                                    <p class="text-muted mb-0 card-text">Maternity Centre</p>
                                 </div>
                             </div>
                         </div>
@@ -557,38 +608,38 @@
     <script src="js/share.js"></script>
     <script>
 
-                const u_id = localStorage.getItem('u_id');
-                axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
-                    headers: {
-                        'id': u_id
-                    }
-                }).then((res) => {
+        const u_id = localStorage.getItem('u_id');
+        axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
+            headers: {
+                'id': u_id
+            }
+        }).then((res) => {
 
-                    if (res.data.user.role !== 'super admin') {
-                        location.href = '/';
-                    }
+            if (res.data.user.role !== 'super admin') {
+                location.href = '/';
+            }
 
-                    const userName = document.querySelectorAll('.user-name');
-                    const email = document.getElementById('user-role');
+            const userName = document.querySelectorAll('.user-name');
+            const email = document.getElementById('user-role');
 
-                    userName.forEach((name) => {
-                        name.innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
-                    })
+            userName.forEach((name) => {
+                name.innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
+            })
 
-                    email.innerHTML = res.data.user.role
-                }).catch((err) => {
-                    if (err.response.data.error === 'User not found') {
-                         location.href = '/';
-                    }
-                    console.log(err);
-                })
+            email.innerHTML = res.data.user.role
+        }).catch((err) => {
+            if (err.response.data.error === 'User not found') {
+                location.href = '/';
+            }
+            console.log(err);
+        })
 
-                const loginOut = document.getElementById('logout-btn');
+        const loginOut = document.getElementById('logout-btn');
 
-                loginOut.addEventListener(('click'), () => {
-                    localStorage.clear()
-                    location.href = '/';
-                })
+        loginOut.addEventListener(('click'), () => {
+            localStorage.clear()
+            location.href = '/';
+        })
 
         // Remote Care functionality
         const remoteCareDropdown = document.getElementById('m-remote-care-dropdown');
@@ -659,7 +710,7 @@
 
             try {
                 const res = await axios.get('https://health-care-facilities-backend.vercel.app/api/get-reports');
-                const facilityCounts = { hospital: 0, emergency: 0, chemists: 0, "medical labs": 0 };
+                const facilityCounts = { hospital: 0, "health centre": 0, chemists: 0, "medical labs": 0, pharmacy: 0, "drug store": 0, "maternity centre": 0 };
 
                 allData = res.data.data;
                 totalRecords = allData.length;
@@ -768,8 +819,11 @@
 
                 document.getElementById('total-chemists').innerText = facilityCounts.chemists;
                 document.getElementById('total-hospital').innerText = facilityCounts.hospital;
-                document.getElementById('total-emergency').innerText = facilityCounts.emergency;
+                document.getElementById('total-emergency').innerText = facilityCounts["health centre"];
                 document.getElementById('total-medical-labs').innerText = facilityCounts["medical labs"];
+                document.getElementById('total-drug-store').innerText = facilityCounts['drug store'];
+                document.getElementById('total-maternity-centre').innerText = facilityCounts['maternity centre'];
+                document.getElementById('total-pharmacy ').innerText = facilityCounts.pharmacy;
 
                 let viewFacilityId;
                 // Initialize view buttons
@@ -984,6 +1038,33 @@
 
 
         //  Chemists Filter
+        document.getElementById("maternity-centre-card").addEventListener("click", function () {
+            let query = 'maternity centre';
+            let filteredData = allData.filter(item =>
+                item.facility_type.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
+        //  Chemists Filter
+        document.getElementById("drug-store-card").addEventListener("click", function () {
+            let query = 'drug store';
+            let filteredData = allData.filter(item =>
+                item.facility_type.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
+        //  Chemists Filter
+        document.getElementById("pharmacy-card").addEventListener("click", function () {
+            let query = 'pharmacy';
+            let filteredData = allData.filter(item =>
+                item.facility_type.toLowerCase().includes(query)
+            );
+            renderTable(filteredData);
+        });
+
+        //  Chemists Filter
         document.getElementById("medical-card").addEventListener("click", function () {
             let query = 'medical labs';
             let filteredData = allData.filter(item =>
@@ -994,7 +1075,7 @@
 
         //  Chemists Filter
         document.getElementById("emergency-card").addEventListener("click", function () {
-            let query = 'emergency';
+            let query = 'health centre';
             let filteredData = allData.filter(item =>
                 item.facility_type.toLowerCase().includes(query)
             );
@@ -1146,6 +1227,8 @@
             sortOldest.addEventListener("click", function () {
                 sortLabel.innerHTML = `Sort by: <span style="font-weight: bold; color:black;">Oldest</span>`;
             });
+            
+            
         });
 
 
