--- a/my-account/edit-facilities.html
+++ b/my-account/edit-facilities.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global CareGivers Database</title>
-    <link rel="shortcut icon" href="assets/images/logo loading screen.png type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo loading screen.png type=" image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/edit-facilities.css" />
@@ -217,9 +217,14 @@
                             <select class="form-select" name="facility_type" id="facilityType" required>
                                 <option value="">Facility Type*</option>
                                 <option value="hospital">Hospital</option>
-                                <option value="emergency">Emergency</option>
+                                <option value="hospital">Hospital</option>
+                                <option value="health centre">Health Centre</option>
+                                <option value="pharmacy">Pharmacy</option>
+                                <option value="drug store">Drug Store</option>
+                                <option value="maternity centre">Maternity Centre</option>
                                 <option value="medical labs">Medical Labs</option>
                                 <option value="chemists">Chemists</option>
+                                <option value="not stated">Not Stated</option>
                                 <option value="other">Other</option>
                             </select>
                             <div id="otherFacilityType" style="display: none;" class="mt-2">
@@ -236,6 +241,7 @@
                                 <option value="private">Private</option>
                                 <option value="charity">Charity</option>
                                 <option value="church">Church</option>
+                                <option value="not stated">Not Stated</option>
                                 <option value="other">Other</option>
                             </select>
                             <div id="otherOwnershipType" style="display: none;" class="mt-2">
