--- a/facility-listings.html
+++ b/facility-listings.html
@@ -378,6 +378,8 @@
                     // Handle A&E facility
                     if (item.facility_a_e === 'yes') {
                         facilityAEHTML = `<p class="facility-ae mb-1">A&E Facility</p>`;
+                    }else{
+                        facilityAEHTML = `<p class="facility-ae mb-1">Not Stated</p>`;
                     }
 
                     facilityContainer.innerHTML += `
