--- a/my-account/health-facilities.html
+++ b/my-account/health-facilities.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global CareGivers Database</title>
-    <link rel="shortcut icon" href="assets/images/logo loading screen.png type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo loading screen.png type=" image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
@@ -536,22 +536,22 @@
                     <h4>Share</h4>
                 </div>
                 <div class="d-flex flex-column social-button">
-                <button class="fb-share-btn">
-                    <img src="assets/facebook.png" alt="Facebook">
-                    <span class="mx-3">Facebook</span>
-                </button>
-                <button class="whatsapp-share-btn">
-                    <img src="assets/whats app.png" alt="WhatsApp">
-                    <span class="mx-3">WhatsApp</span>
-                </button>
-                <button class="x-share-btn">
-                    <img src="assets/x.png" alt="X">
-                    <span class="mx-3">X</span>
-                </button>
-                <button class="email-share-btn">
-                    <img src="assets/email.png" alt="Email">
-                    <span class="mx-3">Email</span>
-                </button>
+                    <button class="fb-share-btn">
+                        <img src="assets/facebook.png" alt="Facebook">
+                        <span class="mx-3">Facebook</span>
+                    </button>
+                    <button class="whatsapp-share-btn">
+                        <img src="assets/whats app.png" alt="WhatsApp">
+                        <span class="mx-3">WhatsApp</span>
+                    </button>
+                    <button class="x-share-btn">
+                        <img src="assets/x.png" alt="X">
+                        <span class="mx-3">X</span>
+                    </button>
+                    <button class="email-share-btn">
+                        <img src="assets/email.png" alt="Email">
+                        <span class="mx-3">Email</span>
+                    </button>
                 </div>
                 <div class="close-btn">
                     <button class="btn border-0" type="submit" id="share-close"><img src="assets/icons/close.svg"
@@ -606,7 +606,7 @@
         })
 
         const loginOut = document.getElementById('logout-btn');
-        
+
         loginOut.addEventListener(('click'), () => {
             localStorage.clear()
             location.href = '/';
@@ -660,7 +660,7 @@
 
             try {
                 const res = await axios.post('https://health-care-facilities-backend.vercel.app/api/get-user-report', { email: userEmail });
-                const facilityCounts = { hospital: 0, "health centre": 0, chemists: 0, "medical labs": 0 , pharmacy : 0 , "drug store" : 0 , "maternity centre" : 0};
+                const facilityCounts = { hospital: 0, "health centre": 0, chemists: 0, "medical labs": 0, pharmacy: 0, "drug store": 0, "maternity centre": 0 };
 
                 allData = res.data.data;
                 totalRecords = allData.length;
@@ -915,8 +915,11 @@
                     }
                 }
 
+                // FACILITY BOX LOGIC
                 if (facilityAE === 'yes') {
                     document.querySelector('.facility-box').innerHTML = `<p class="facility-ae mb-1">A&E Facility</p>`;
+                } else {
+                    document.querySelector('.facility-box').innerHTML = `<p class="facility-ae mb-1">Not Stated</p>`;
                 }
 
                 directionsBtn.addEventListener(('click'), () => {
