--- a/facility-listings.html
+++ b/facility-listings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Global CareGivers Database</title>
-    <link rel="shortcut icon" href="assets/images/logo loading screen.png type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/images/logo loading screen.png"image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="admin-dashboard/css/main.css">
@@ -94,7 +94,7 @@
                                     <img src="assets/images/user.png" width="25" alt="">
                                     Admin Dashboard
                                 </a></li>
-                            <li><a class="dropdown-item py-2 d-flex align-items-center gap-3"
+                            <li id="user-account"><a class="dropdown-item py-2 d-flex align-items-center gap-3"
                                     href="/my-account/health-facilities.html">
                                     <img src="assets/images/user.png" width="25" alt="">
                                     My Account
@@ -248,6 +248,8 @@
             if (res.data.user.role === 'super admin') {
                 document.getElementById('admin-dashboard').classList.remove('d-none');
                 document.getElementById('nav-admin-dashboard').classList.remove('d-none');
+                document.getElementById('user-account').classList.add('d-none');
+
             } else {
                 document.getElementById('admin-dashboard').classList.add('d-none');
                 document.getElementById('nav-admin-dashboard').classList.add('d-none');
@@ -362,7 +364,8 @@
                         }
                     } else {
                         if (startTime) {
-                            if (startTime === '-') {
+                            
+                            if (startTime === '-' || isNaN(startTime)) {
                                 timingHTML = `<p class="hours-24 mb-1">Open 24 Hours</p>`;
                             }
                             else {
@@ -383,53 +386,55 @@
                     }
 
                     facilityContainer.innerHTML += `
-        <div class="col-12 p-0 col-sm-6 col-md-4 px-3 card-col h-100">
-            <div class="facility-card p-4">
-                <div class="text-center mb-3">
-                    <h2 class="facility-name mb-1">${item.organisation_name}</h2>
-                    <p class="facility-type mb-3">${item.facility_type.charAt(0).toUpperCase() + item.facility_type.slice(1)} , ${item.city} , ${item.state} , ${item.country}</p>
-                </div>
+    <div class="col-12 p-0 col-sm-6 col-md-4 px-3 card-col h-100">
+        <div class="facility-card p-4">
+            <div class="text-center mb-3">
+                <h2 class="facility-name mb-1">${item.organisation_name}</h2>
+                <p class="facility-type mb-3">${item.facility_type.charAt(0).toUpperCase() + item.facility_type.slice(1)} , ${item.city} , ${item.state} , ${item.country}</p>
+            </div>
 
-                <div class="d-flex justify-content-center gap-2 mb-4">
-                    <button class="btn btn-light px-3 py-1 rounded-pill share-btn">
-                        <i class="bi bi-share"></i> Share
+            <div class="d-flex justify-content-center gap-2 mb-4">
+                <button class="btn btn-light px-3 py-1 rounded-pill share-btn" data-org="${item.organisation_name}" data-link="${item.google_maps_link}">
+                    <i class="bi bi-share"></i> Share
+                </button>
+                <a href="${item.google_maps_link}" target="_blank">
+                    <button class="btn btn-light px-3 py-1 rounded-pill directions-btn">
+                        <i class="bi bi-geo-alt"></i> Directions
                     </button>
-                        <a href="${item.google_maps_link}" target="_blank">
-                <button class="btn btn-light px-3 py-1 rounded-pill directions-btn">
-                   <i class="bi bi-geo-alt"></i> Directions
-                   </button>
-                  </a>
-                </div>
+                </a>
+            </div>
 
-                <div class="text-center mb-3">
-                    <h6 class="address-label mb-2">Address</h6>
-                    <p class="facility-address mb-3">${item.address ? `${item.address}, ` : ""}
-                        ${item.zip_code ? `${item.zip_code}, ` : ""}
-                        ${item.city}, ${item.state}, ${item.country}</p>
-                </div>
+            <div class="text-center mb-3">
+                <h6 class="address-label mb-2">Address</h6>
+                <p class="facility-address mb-3">${item.address ? `${item.address}, ` : ""}${item.zip_code ? `${item.zip_code}, ` : ""}${item.city}, ${item.state}, ${item.country}</p>
+            </div>
 
-                <div class="text-center mb-3">
-                    <div class="facility-email mb-1"><a href="mailto:${item.email}">${item.email}</a></div>
-                    <div class="facility-phone"><a href="tel:${item.phone}">${item.phone}</a></div>
-                </div>
+            <div class="text-center mb-3">
+                <div class="facility-email mb-1"><a href="mailto:${item.email}">${item.email}</a></div>
+                <div class="facility-phone"><a href="tel:${item.phone}">${item.phone}</a></div>
+            </div>
 
-                <div class="text-center mb-3 facility-box">
-                    ${facilityAEHTML}
-                </div>
+            <div class="text-center mb-3 facility-box">
+                ${facilityAEHTML}
+            </div>
 
-                <div class="text-center timing-box">
-                    ${timingHTML}
-                </div>
+            <div class="text-center timing-box">
+                ${timingHTML}
             </div>
         </div>
-    `;
-                    // Show Share Popup 
-                    const shareBtn = document.querySelectorAll('.share-btn');
-                    shareBtn.forEach((button) => {
-                        button.addEventListener(('click'), () => {
+    </div>
+`;
+                    const shareBtns = document.querySelectorAll('.share-btn');
+                    shareBtns.forEach((button) => {
+                        button.addEventListener('click', () => {
+                            const orgName = button.getAttribute('data-org');
+                            const mapsLink = button.getAttribute('data-link');
+                            localStorage.setItem('orgName' , orgName)
+                            localStorage.setItem('mapsLink' , mapsLink)
                             shareFun()
-                        })
-                    })
+                        });
+                    });
+
 
                 });
 
@@ -525,58 +530,61 @@
                 }
 
                 // Handle A&E facility
-                if (item.facility_a_e === 'yes') {
+                if (item.facility_a_e === 'yes') { 
                     facilityAEHTML = `<p class="facility-ae mb-1">A&E Facility</p>`;
+                } else {
+                    facilityAEHTML = `<p class="facility-ae mb-1">Not Stated</p>`;
                 }
-
+                
                 facilityContainer.innerHTML += `
-        <div class="col-12 p-0 col-sm-6 col-md-4 px-3 h-100 card-col">
-            <div class="facility-card p-4">
-                <div class="text-center mb-3">
-                    <h2 class="facility-name mb-1">${item.organisation_name}</h2>
-                    <p class="facility-type mb-3">${item.facility_type.charAt(0).toUpperCase() + item.facility_type.slice(1)} , ${item.city} , ${item.state} , ${item.country}</p>
-                </div>
+    <div class="col-12 p-0 col-sm-6 col-md-4 px-3 card-col h-100">
+        <div class="facility-card p-4">
+            <div class="text-center mb-3">
+                <h2 class="facility-name mb-1">${item.organisation_name}</h2>
+                <p class="facility-type mb-3">${item.facility_type.charAt(0).toUpperCase() + item.facility_type.slice(1)} , ${item.city} , ${item.state} , ${item.country}</p>
+            </div>
 
-                <div class="d-flex justify-content-center gap-2 mb-4">
-                    <button class="btn btn-light px-3 py-1 rounded-pill share-btn">
-                        <i class="bi bi-share"></i> Share
+            <div class="d-flex justify-content-center gap-2 mb-4">
+                <button class="btn btn-light px-3 py-1 rounded-pill share-btn" data-org="${item.organisation_name}" data-link="${item.google_maps_link}">
+                    <i class="bi bi-share"></i> Share
+                </button>
+                <a href="${item.google_maps_link}" target="_blank">
+                    <button class="btn btn-light px-3 py-1 rounded-pill directions-btn">
+                        <i class="bi bi-geo-alt"></i> Directions
                     </button>
-                     <a href="${item.google_maps_link}" target="_blank">
-                <button class="btn btn-light px-3 py-1 rounded-pill directions-btn">
-                   <i class="bi bi-geo-alt"></i> Directions
-                   </button>
-                  </a>
-                </div>
+                </a>
+            </div>
 
-                <div class="text-center mb-3">
-                    <h6 class="address-label mb-2">Address</h6>
-                    <p class="facility-address mb-3">${item.address ? `${item.address}, ` : ""}
-                        ${item.zip_code ? `${item.zip_code}, ` : ""}
-                        ${item.city}, ${item.state}, ${item.country}</p>
-                </div>
+            <div class="text-center mb-3">
+                <h6 class="address-label mb-2">Address</h6>
+                <p class="facility-address mb-3">${item.address ? `${item.address}, ` : ""}${item.zip_code ? `${item.zip_code}, ` : ""}${item.city}, ${item.state}, ${item.country}</p>
+            </div>
 
-                <div class="text-center mb-3">
-                    <div class="facility-email mb-1"><a href="mailto:${item.email}">${item.email}</a></div>
-                    <div class="facility-phone"><a href="tel:${item.phone}">${item.phone}</a></div>
-                </div>
+            <div class="text-center mb-3">
+                <div class="facility-email mb-1"><a href="mailto:${item.email}">${item.email}</a></div>
+                <div class="facility-phone"><a href="tel:${item.phone}">${item.phone}</a></div>
+            </div>
 
-                <div class="text-center mb-3 facility-box">
-                    ${facilityAEHTML}
-                </div>
+            <div class="text-center mb-3 facility-box">
+                ${facilityAEHTML}
+            </div>
 
-                <div class="text-center timing-box">
-                    ${timingHTML}
-                </div>
+            <div class="text-center timing-box">
+                ${timingHTML}
             </div>
         </div>
-    `;
-                // Show Share Popup 
-                const shareBtn = document.querySelectorAll('.share-btn');
-                shareBtn.forEach((button) => {
-                    button.addEventListener(('click'), () => {
+    </div>
+`;
+                const shareBtns = document.querySelectorAll('.share-btn');
+                shareBtns.forEach((button) => {
+                    button.addEventListener('click', () => {
+                        const orgName = button.getAttribute('data-org');
+                        const mapsLink = button.getAttribute('data-link');
+                        localStorage.setItem('orgName', orgName)
+                        localStorage.setItem('mapsLink', mapsLink)
                         shareFun()
-                    })
-                })
+                    });
+                });
             });
 
         }
